--- a/packages/blueprints-addon/package.json
+++ b/packages/blueprints-addon/package.json
@@ -35,8 +35,9 @@
   "dependencies": {
     "@codemod-utils/ast-javascript": "^1.2.8",
     "@codemod-utils/blueprints": "^1.1.5",
-    "@codemod-utils/json": "^1.1.9",
+    "@codemod-utils/ember-cli-string": "^1.1.4",
     "@codemod-utils/files": "^2.0.4",
+    "@codemod-utils/json": "^1.1.9",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
