--- a/configs/ember-template-lint/package.json
+++ b/configs/ember-template-lint/package.json
@@ -2,18 +2,13 @@
   "name": "@shared-configs/ember-template-lint",
   "version": "0.0.0",
   "private": true,
-  "description": "Configuration for ember-template-lint",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ijlee2/embroider-css-modules.git"
-  },
-  "author": "Isaac J. Lee",
+  "description": "Shared configuration for ember-template-lint",
   "main": ".template-lintrc.js",
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently 'pnpm:lint:*(!fix)' --names 'lint:'",
+    "lint:fix": "concurrently 'pnpm:lint:*:fix' --names 'fix:'",
+    "lint:js": "prettier --check '**/*.js'",
+    "lint:js:fix": "prettier --write '**/*.js'"
   },
   "dependencies": {
     "ember-template-lint-plugin-prettier": "^5.0.0"
