--- a/configs/eslint/node/package.json
+++ b/configs/eslint/node/package.json
@@ -2,18 +2,13 @@
   "name": "@shared-configs/eslint-config-node",
   "version": "0.0.0",
   "private": true,
-  "description": "Configuration for eslint (Node)",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ijlee2/embroider-css-modules.git"
-  },
-  "author": "Isaac J. Lee",
+  "description": "Shared configuration for eslint (Node)",
   "main": "typescript/index.js",
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently 'npm:lint:*(!fix)' --names 'lint:'",
+    "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
+    "lint:js": "prettier --check '**/*.js'",
+    "lint:js:fix": "prettier --write '**/*.js'"
   },
   "dependencies": {
     "@babel/core": "^7.24.7",
