--- a/packages/create-v2-addon-repo/src/blueprints/blueprints-addon/src/blueprints/run-new/__addonLocation__/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/blueprints-addon/src/blueprints/run-new/__addonLocation__/package.json
@@ -81,6 +81,7 @@
     "babel-plugin-ember-template-compilation": "^2.2.5",
     "blueprints-addon": "workspace:*",
     "concurrently": "^8.2.2",
+    "ember-modifier": "^4.2.0",
     "ember-source": "~5.10.2",
     "ember-template-lint": "^6.0.0",
     "eslint": "^8.57.0",
