chore: Updated fixtures

--- a/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/.gitignore
+++ b/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/.gitignore
@@ -1,15 +1,12 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
-/dist/
-/tmp/
+dist/
+tmp/
 
 # dependencies
-/node_modules/
+node_modules/
 
 # misc
-/.DS_Store
-/.env*
-/npm-debug.log*
-/pnpm-debug.log*
-/pnpm-error.log*
+.DS_Store
+.env*
+pnpm-debug.log
+pnpm-error.log
