--- a/packages/create-v2-addon-repo/.npmignore
+++ b/packages/create-v2-addon-repo/.npmignore
@@ -18,7 +18,5 @@
 /.prettierignore
 /.prettierrc.cjs
 /build.sh
-/codemod-test-fixture.sh
-/codemod-test-fixtures.sh
-/create-test-fixture.sh
 /tests/
+/update-test-fixtures.sh
