--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -5,13 +5,23 @@
   "description": "Workspace root for <%= options.project.name %>",
   "scripts": {
     "addon": "blueprints-addon",
-    "build": "pnpm --filter blueprints-addon --filter './packages/**' build",
-    "lint": "pnpm --filter '*' lint",
-    "lint:fix": "pnpm --filter '*' lint:fix",
-    "start": "concurrently 'pnpm:start:*' --prefix-colors cyan,white,yellow",
+    "build": "concurrently 'pnpm:build:*' --group --names 'build:' --prefix-colors cyan,yellow,white",
+    "build:blueprints-addon": "pnpm --filter blueprints-addon build",
+    "build:packages": "pnpm --filter './packages/**' build",
+    "lint": "concurrently 'pnpm:lint:*(!fix)' --group --names 'lint:' --prefix-colors cyan,yellow,white",
+    "lint:docs-app": "pnpm --filter docs-app lint",
+    "lint:docs-app:fix": "pnpm --filter docs-app lint:fix",
+    "lint:fix": "concurrently 'pnpm:lint:*:fix' --group --names 'fix:' --prefix-colors cyan,yellow,white",
+    "lint:packages": "pnpm --filter './packages/**' lint",
+    "lint:packages:fix": "pnpm --filter './packages/**' lint:fix",
+    "lint:test-app": "pnpm --filter test-app lint",
+    "lint:test-app:fix": "pnpm --filter test-app lint:fix",
+    "start": "concurrently 'pnpm:start:*' --group --names 'start:' --prefix-colors cyan,yellow,white",
     "start:docs-app": "pnpm --filter docs-app start",
     "start:test-app": "pnpm --filter test-app start",
-    "test": "pnpm --filter blueprints-addon --filter docs-app --filter test-app test"
+    "test": "concurrently 'pnpm:test:*' --group --names 'test:' --prefix-colors cyan,yellow,white",
+    "test:docs-app": "pnpm --filter docs-app test",
+    "test:test-app": "pnpm --filter test-app test"
   },
   "devDependencies": {
     "blueprints-addon": "workspace:*",
