--- a/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/.github/workflows/ci.yml
+++ b/packages/create-v2-addon-repo/tests/fixtures/typescript/output/my-repo/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
     strategy:
       matrix:
         package-location:
-          # - 'docs-app'
+          - 'docs-app'
           - 'test-app'
     timeout-minutes: 5
     steps:
