--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 packages:
   - configs/**
+  - packages/analyze-ember-project-dependencies
   - packages/blueprints-addon
   - packages/create-v2-addon-repo
