--- a/configs/eslint/node/package.json
+++ b/configs/eslint/node/package.json
@@ -5,8 +5,8 @@
   "description": "Shared configuration for eslint (Node)",
   "main": "typescript/index.js",
   "scripts": {
-    "lint": "concurrently 'npm:lint:*(!fix)' --names 'lint:'",
-    "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
+    "lint": "concurrently 'pnpm:lint:*(!fix)' --names 'lint:'",
+    "lint:fix": "concurrently 'pnpm:lint:*:fix' --names 'fix:'",
     "lint:js": "prettier --check '**/*.js'",
     "lint:js:fix": "prettier --write '**/*.js'"
   },
@@ -14,8 +14,8 @@
     "@babel/core": "^7.24.7",
     "@babel/eslint-parser": "7.25.1",
     "@rushstack/eslint-patch": "^1.10.3",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
