--- a/packages/analyze-ember-project-dependencies/package.json
+++ b/packages/analyze-ember-project-dependencies/package.json
@@ -38,6 +38,7 @@
     "@codemod-utils/ember-cli-string": "^1.1.4",
     "@codemod-utils/files": "^2.0.4",
     "@codemod-utils/json": "^1.1.9",
+    "content-tag": "^2.0.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
