--- a/packages/blueprints-addon/package.json
+++ b/packages/blueprints-addon/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blueprints-addon",
+  "name": "blueprints-v2-addon",
   "version": "0.0.0",
   "private": true,
-  "description": "CLI for v2 addons",
+  "description": "Blueprints for v2 addons",
   "keywords": [
     "codemod",
     "ember-codemod",
@@ -16,7 +16,7 @@
   "author": "Isaac J. Lee",
   "type": "module",
   "main": "dist/src/index.js",
-  "bin": "dist/bin/blueprints-addon.js",
+  "bin": "dist/bin/blueprints-v2-addon.js",
   "directories": {
     "test": "tests"
   },
