--- a/packages/blueprints-v2-addon/package.json
+++ b/packages/blueprints-v2-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blueprints-v2-addon",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "Blueprints for v2 addons",
   "keywords": [
@@ -30,7 +30,9 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "lint:types": "tsc --noEmit",
-    "test": "./build.sh --test && mt dist-for-testing --quiet"
+    "test": "./build.sh --test && mt dist-for-testing --quiet",
+    "update-blueprints": "./update-blueprints.js",
+    "update-test-fixtures": "./update-test-fixtures.sh"
   },
   "dependencies": {
     "@codemod-utils/ast-javascript": "^1.2.8",
@@ -50,6 +52,7 @@
     "@types/yargs": "^17.0.33",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
+    "git-diff-apply": "^6.0.5",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   },
