--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -17,6 +17,7 @@
     "blueprints-v2-addon": "workspace:*",
     "concurrently": "^8.2.2"
   },
+  "packageManager": "pnpm@9.9.0",
   "engines": {
     "node": "18.* || >= 20",
     "pnpm": ">= 9"
