--- a/packages/create-v2-addon-repo/src/blueprints/.github/workflows/ci.yml
+++ b/packages/create-v2-addon-repo/src/blueprints/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: built-packages
+          include-hidden-files: true
           path: |
             packages/**/declarations/**/*
             packages/**/dist/**/*
