feature: Installed update-workspace-root-version

--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "blueprints-v2-addon": "workspace:*",
-    "concurrently": "^9.0.0"
+    "concurrently": "^9.0.0",
+    "update-workspace-root-version": "^1.0.0"
   },
   "packageManager": "pnpm@9.9.0",
   "engines": {
