--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -21,5 +21,10 @@
   "engines": {
     "node": "18.* || >= 20",
     "pnpm": ">= 9"
+  },
+  "pnpm": {
+    "overrides": {
+      "@embroider/babel-loader-9>babel-loader": "9.1.3"
+    }
   }
 }
