--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
@@ -26,15 +26,15 @@
     "test": "ember test --test-port 0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.25.7",
     "@ember/optional-features": "^2.1.0",
     "@ember/string": "^4.0.0",
     "@ember/test-helpers": "^4.0.4",
-    "@embroider/broccoli-side-watch": "0.0.2-unstable.ba9fd29",
-    "@embroider/compat": "^3.6.1",
-    "@embroider/core": "^3.4.15",
+    "@embroider/broccoli-side-watch": "^1.0.0",
+    "@embroider/compat": "^3.6.4",
+    "@embroider/core": "^3.4.18",
     "@embroider/router": "^2.1.8",
-    "@embroider/webpack": "^4.0.5",
+    "@embroider/webpack": "^4.0.7",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@glint/core": "^1.4.0",
@@ -50,9 +50,9 @@
     "autoprefixer": "^10.4.20",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^9.0.1",
-    "ember-a11y-testing": "^7.0.0",
-    "ember-auto-import": "^2.7.4",
-    "ember-cli": "~5.11.0",
+    "ember-a11y-testing": "^7.0.1",
+    "ember-auto-import": "^2.8.1",
+    "ember-cli": "~5.12.0",
     "ember-cli-app-version": "^7.0.0",
     "ember-cli-babel": "^8.2.0",
     "ember-cli-clean-css": "^3.0.0",
@@ -61,29 +61,29 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-load-initializers": "^2.1.2",
+    "ember-load-initializers": "^3.0.1",
     "ember-modifier": "^4.2.0",
     "ember-page-title": "^8.2.3",
     "ember-qunit": "^8.1.0",
-    "ember-resolver": "^13.0.1",
-    "ember-source": "~5.11.0",
-    "ember-template-imports": "^4.1.1",
+    "ember-resolver": "^13.0.2",
+    "ember-source": "~5.12.0",
+    "ember-template-imports": "^4.1.3",
     "ember-template-lint": "^6.0.0",
     "ember-test-selectors": "^7.0.0",
     "embroider-css-modules": "^2.0.11",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "latest-version": "^9.0.0",
     "loader.js": "^4.7.0",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "qunit": "^2.22.0",
-    "qunit-dom": "^3.2.0",
+    "qunit-dom": "^3.2.1",
     "stylelint": "^16.9.0",
     "tracked-built-ins": "^3.3.0",
     "type-css-modules": "^1.0.13",
-    "typescript": "^5.6.2",
-    "webpack": "^5.94.0"
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0"
   },
   "engines": {
     "node": "18.* || >= 20"
