--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
@@ -30,7 +30,7 @@
     "@ember/optional-features": "^2.1.0",
     "@ember/string": "^4.0.0",
     "@ember/test-helpers": "^4.0.4",
-    "@embroider/broccoli-side-watch": "^1.0.0",
+    "@embroider/broccoli-side-watch": "0.0.2-unstable.ba9fd29",
     "@embroider/compat": "^3.6.4",
     "@embroider/core": "^3.4.18",
     "@embroider/router": "^2.1.8",
