--- a/configs/prettier/package.json
+++ b/configs/prettier/package.json
@@ -5,10 +5,10 @@
   "description": "Shared configuration for prettier",
   "main": ".prettierrc.js",
   "scripts": {
-    "lint": "concurrently 'pnpm:lint:*(!fix)' --names 'lint:'",
-    "lint:fix": "concurrently 'pnpm:lint:*:fix' --names 'fix:'",
-    "lint:js": "prettier --check '**/*.js'",
-    "lint:js:fix": "prettier --write '**/*.js'"
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier --check \"**/*.js\"",
+    "lint:js:fix": "prettier --write \"**/*.js\""
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
