--- a/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
@@ -5,10 +5,10 @@
   "description": "Shared configuration for typescript",
   "main": "ember/tsconfig.json",
   "scripts": {
-    "lint": "concurrently 'pnpm:lint:*(!fix)' --names 'lint:'",
-    "lint:fix": "concurrently 'pnpm:lint:*:fix' --names 'fix:'",
-    "lint:js": "prettier --check '**/*.js'",
-    "lint:js:fix": "prettier --write '**/*.js'"
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier --check \"**/*.js\"",
+    "lint:js:fix": "prettier --write \"**/*.js\""
   },
   "dependencies": {
     "@tsconfig/ember": "^3.0.8",
