--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
@@ -13,7 +13,10 @@
         "types/*"
       ]
     },
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": [
+      "ember-source/types"
+    ]
   },
   "include": [
     "app/**/*",
