--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -5,10 +5,10 @@
   "description": "Workspace root for <%= options.project.name %>",
   "scripts": {
     "addon": "blueprints-v2-addon",
-    "build": "pnpm --filter blueprints-v2-addon --filter './packages/**' build",
-    "lint": "pnpm --filter '*' lint",
-    "lint:fix": "pnpm --filter '*' lint:fix",
-    "start": "concurrently 'pnpm:start:*' --names 'start:' --prefix-colors cyan,yellow",
+    "build": "pnpm --filter blueprints-v2-addon --filter \"./packages/**\" build",
+    "lint": "pnpm --filter \"*\" lint",
+    "lint:fix": "pnpm --filter \"*\" lint:fix",
+    "start": "concurrently \"pnpm:start:*\" --names \"start:\" --prefix-colors cyan,yellow",
     "start:docs-app": "pnpm --filter docs-app start",
     "start:test-app": "pnpm --filter test-app start",
     "test": "pnpm --filter docs-app --filter test-app test"
