--- a/configs/ember-template-lint/package.json
+++ b/configs/ember-template-lint/package.json
@@ -2,13 +2,19 @@
   "name": "@shared-configs/ember-template-lint",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for ember-template-lint",
-  "main": ".template-lintrc.js",
+  "description": "Configuration for ember-template-lint",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ijlee2/embroider-toolbox.git"
+  },
+  "author": "Isaac J. Lee",
+  "type": "module",
+  "main": ".template-lintrc.cjs",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint:js": "prettier . --check",
+    "lint:js:fix": "prettier . --write"
   },
   "dependencies": {
     "ember-template-lint-plugin-prettier": "^5.0.0"
