--- a/configs/eslint/ember/package.json
+++ b/configs/eslint/ember/package.json
@@ -2,13 +2,19 @@
   "name": "@shared-configs/eslint-config-ember",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for eslint (Ember)",
+  "description": "Configuration for eslint (Ember)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ijlee2/embroider-toolbox.git"
+  },
+  "author": "Isaac J. Lee",
+  "type": "module",
   "main": "app/index.js",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix"
   },
   "dependencies": {
     "@babel/core": "^7.26.7",
@@ -36,7 +42,7 @@
     "prettier": "^3.4.2"
   },
   "peerDependencies": {
-    "eslint": "^9.19.0",
+    "eslint": "^9.1.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
   },
