--- a/configs/prettier/package.json
+++ b/configs/prettier/package.json
@@ -2,13 +2,19 @@
   "name": "@shared-configs/prettier",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for prettier",
-  "main": ".prettierrc.js",
+  "description": "Configuration for prettier",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ijlee2/embroider-toolbox.git"
+  },
+  "author": "Isaac J. Lee",
+  "type": "module",
+  "main": ".prettierrc.cjs",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint:js": "prettier . --check",
+    "lint:js:fix": "prettier . --write"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
