--- a/configs/typescript/package.json
+++ b/configs/typescript/package.json
@@ -2,13 +2,19 @@
   "name": "@shared-configs/typescript",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for typescript",
+  "description": "Configuration for typescript",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ijlee2/embroider-toolbox.git"
+  },
+  "author": "Isaac J. Lee",
+  "type": "module",
   "main": "ember/tsconfig.json",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint:js": "prettier . --check",
+    "lint:js:fix": "prettier . --write"
   },
   "dependencies": {
     "@tsconfig/ember": "^3.0.9",
