--- a/packages/analyze-ember-project-dependencies/.npmignore
+++ b/packages/analyze-ember-project-dependencies/.npmignore
@@ -9,8 +9,6 @@
 /.DS_Store
 /.env*
 /.eslintcache
-/.eslintignore
-/.eslintrc.cjs
 /.git/
 /.github/
 /.gitignore
@@ -18,5 +16,6 @@
 /.prettierignore
 /.prettierrc.cjs
 /build.sh
+/eslint.config.js
 /tests/
 /update-test-fixtures.sh
