chore: Ran update-blueprints-v2-addon

--- a/packages/create-v2-addon-repo/src/blueprints/blueprints/v2-addon/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/blueprints/v2-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blueprints-v2-addon",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "description": "Blueprints for v2 addons",
   "keywords": [
@@ -31,27 +31,27 @@
     "lint:js:fix": "eslint . --fix",
     "lint:types": "tsc --noEmit",
     "test": "./build.sh --test && mt dist-for-testing --quiet",
-    "update-blueprints": "./update-blueprints.js",
+    "update-blueprints": "./update-blueprints.mjs",
     "update-test-fixtures": "./update-test-fixtures.sh"
   },
   "dependencies": {
-    "@codemod-utils/ast-javascript": "^1.2.9",
-    "@codemod-utils/blueprints": "^1.1.6",
-    "@codemod-utils/ember": "^2.0.1",
-    "@codemod-utils/files": "^2.0.5",
-    "@codemod-utils/json": "^1.1.10",
+    "@codemod-utils/ast-javascript": "^1.2.11",
+    "@codemod-utils/blueprints": "^1.1.8",
+    "@codemod-utils/ember": "^2.0.3",
+    "@codemod-utils/files": "^2.0.7",
+    "@codemod-utils/json": "^1.1.12",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@codemod-utils/tests": "^1.1.8",
+    "@codemod-utils/tests": "^1.1.10",
     "@shared-configs/eslint-config-node": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
     "@shared-configs/typescript": "workspace:*",
     "@sondr3/minitest": "^0.1.2",
-    "@types/node": "^18.19.70",
+    "@types/node": "^18.19.75",
     "@types/yargs": "^17.0.33",
     "concurrently": "^9.1.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.19.0",
     "git-diff-apply": "^6.0.6",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
