Updated eslint to v9 (#70)
* chore: Updated eslint to v9

* chore: Updated shared eslint configurations

* chore: Updated project configurations

* chore: Ran update-blueprints-v2-addon

* chore: Added lockfile

* chore: Added changeset

---------

Co-authored-by: ijlee2 <ijlee2@users.noreply.github.com>

--- a/packages/blueprints-v2-addon/package.json
+++ b/packages/blueprints-v2-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blueprints-v2-addon",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "description": "Blueprints for v2 addons",
   "keywords": [
@@ -31,7 +31,7 @@
     "lint:js:fix": "eslint . --fix",
     "lint:types": "tsc --noEmit",
     "test": "./build.sh --test && mt dist-for-testing --quiet",
-    "update-blueprints": "./update-blueprints.js",
+    "update-blueprints": "./update-blueprints.mjs",
     "update-test-fixtures": "./update-test-fixtures.sh"
   },
   "dependencies": {
@@ -51,7 +51,7 @@
     "@types/node": "^18.19.75",
     "@types/yargs": "^17.0.33",
     "concurrently": "^9.1.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.19.0",
     "git-diff-apply": "^6.0.6",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
