--- a/packages/analyze-ember-project-dependencies/package.json
+++ b/packages/analyze-ember-project-dependencies/package.json
@@ -42,9 +42,9 @@
   },
   "devDependencies": {
     "@codemod-utils/tests": "^1.1.10",
-    "@ijlee2-frontend-configs/eslint-config-node": "^0.2.1",
-    "@ijlee2-frontend-configs/prettier": "^0.2.0",
-    "@ijlee2-frontend-configs/typescript": "^0.3.0",
+    "@shared-configs/eslint-config-node": "workspace:*",
+    "@shared-configs/prettier": "workspace:*",
+    "@shared-configs/typescript": "workspace:*",
     "@sondr3/minitest": "^0.1.2",
     "@types/node": "^18.19.75",
     "@types/yargs": "^17.0.33",
