feature: Updated eslint to v9 and consumed @ijlee2-frontend-configs

--- a/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
@@ -2,23 +2,35 @@
   "name": "@shared-configs/prettier",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for prettier",
-  "main": ".prettierrc.js",
+  "description": "Configuration for prettier",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier --check \"**/*.js\"",
     "lint:js:fix": "prettier --write \"**/*.js\""
   },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.cjs"
+    }
+  },
+  "scripts": {
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
+    "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
+  },
   "dependencies": {
-    "prettier-plugin-ember-template-tag": "^2.0.4"
+    "@ijlee2-frontend-configs/prettier": "^0.2.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.0"
   },
   "peerDependenciesMeta": {
     "prettier": {
