--- a/packages/create-v2-addon-repo/src/blueprints/configs/ember-template-lint/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/ember-template-lint/package.json
@@ -2,24 +2,25 @@
   "name": "@shared-configs/ember-template-lint",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for ember-template-lint",
-  "main": ".template-lintrc.js",
+  "description": "Configuration for ember-template-lint",
+  "type": "module",
+  "main": "index.cjs",
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
+    "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
   "dependencies": {
-    "ember-template-lint-plugin-prettier": "^5.0.0"
+    "@ijlee2-frontend-configs/ember-template-lint": "^0.4.0"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
-    "ember-template-lint": "^6.0.0"
+    "ember-template-lint": "^6.1.0"
   },
   "peerDependenciesMeta": {
     "ember-template-lint": {
