--- a/packages/create-v2-addon-repo/src/blueprints/configs/eslint/ember/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/eslint/ember/package.json
@@ -2,38 +2,31 @@
   "name": "@shared-configs/eslint-config-ember",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for eslint (Ember)",
-  "main": "app/index.js",
+  "description": "Configuration for eslint (Ember)",
+  "type": "module",
+  "exports": {
+    "./app": "./app/index.js",
+    "./v2-addon": "./v2-addon/index.js"
+  },
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.10.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-ember": "^12.3.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-qunit": "^8.1.2",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-typescript-sort-keys": "^3.3.0"
+    "@ijlee2-frontend-configs/eslint-config-ember": "^0.2.1"
   },
   "devDependencies": {
     "@shared-configs/eslint-config-node": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "eslint": "^8.57.1",
-    "prettier": "^3.4.2"
+    "eslint": "^9.20.0",
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
-    "eslint": "^8.57.1",
-    "prettier": "^3.4.2",
+    "eslint": "^9.20.0",
+    "prettier": "^3.5.0",
     "typescript": "^5.7.3"
   },
   "peerDependenciesMeta": {
@@ -44,7 +37,7 @@
       "optional": false
     },
     "typescript": {
-      "optional": false
+      "optional": true
     }
   },
   "engines": {
