--- a/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
@@ -2,37 +2,36 @@
   "name": "@shared-configs/eslint-config-node",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for eslint (Node)",
-  "main": "typescript/index.js",
+  "description": "Configuration for eslint (Node)",
+  "type": "module",
+  "exports": {
+    "./javascript": "./javascript/index.js",
+    "./typescript": "./typescript/index.js"
+  },
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier --check \"**/*.js\"",
     "lint:js:fix": "prettier --write \"**/*.js\""
   },
+  "scripts": {
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix"
+  },
   "dependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/eslint-parser": "7.26.5",
-    "@rushstack/eslint-patch": "^1.10.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-typescript-sort-keys": "^3.3.0"
+    "@ijlee2-frontend-configs/eslint-config-node": "^0.2.1"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "eslint": "^8.57.1",
-    "prettier": "^3.4.2"
+    "eslint": "^9.20.0",
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
-    "eslint": "^8.57.1",
-    "prettier": "^3.4.2",
+    "eslint": "^9.20.0",
+    "prettier": "^3.5.0",
     "typescript": "^5.7.3"
   },
   "peerDependenciesMeta": {
