--- a/packages/create-v2-addon-repo/src/blueprints/configs/stylelint/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/stylelint/package.json
@@ -2,27 +2,35 @@
   "name": "@shared-configs/stylelint",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for stylelint",
-  "main": ".stylelintrc.js",
+  "description": "Configuration for stylelint",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./default/index.mjs",
+      "require": "./default/index.cjs"
+    },
+    "./css-modules": {
+      "import": "./css-modules/index.mjs",
+      "require": "./css-modules/index.cjs"
+    }
+  },
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
+    "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
   "dependencies": {
-    "stylelint-config-standard": "^37.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.2"
+    "@ijlee2-frontend-configs/stylelint": "^0.2.0"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
-    "prettier": "^3.4.2",
-    "stylelint": "^16.13.0"
+    "prettier": "^3.5.0",
+    "stylelint": "^16.14.1"
   },
   "peerDependenciesMeta": {
     "prettier": {
