--- a/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
@@ -2,23 +2,27 @@
   "name": "@shared-configs/typescript",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared configuration for typescript",
-  "main": "ember/tsconfig.json",
+  "description": "Configuration for typescript",
+  "type": "module",
+  "exports": {
+    "./ember": "./ember/index.json",
+    "./node18": "./node18/index.json",
+    "./node20": "./node20/index.json",
+    "./node22": "./node22/index.json"
+  },
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:js": "prettier \"**/*.{cjs,json,mjs}\" --check",
+    "lint:js:fix": "prettier \"**/*.{cjs,json,mjs}\" --write"
   },
   "dependencies": {
-    "@tsconfig/ember": "^3.0.8",
-    "@tsconfig/node18": "^18.2.4",
-    "@tsconfig/strictest": "^2.0.5"
+    "@ijlee2-frontend-configs/typescript": "^0.3.0"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.0"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
