--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -17,9 +17,14 @@
     "blueprints-v2-addon": "workspace:*",
     "concurrently": "^9.1.2"
   },
-  "packageManager": "pnpm@9.15.3",
+  "packageManager": "pnpm@9.15.5",
   "engines": {
     "node": "18.* || >= 20",
     "pnpm": ">= 9"
+  },
+  "pnpm": {
+    "overrides": {
+      "get-tsconfig": "4.7.3"
+    }
   }
 }
