chore: Scaffolded package

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,3 +3,4 @@ packages:
   - packages/analyze-ember-project-dependencies
   - packages/blueprints-v2-addon
   - packages/create-v2-addon-repo
+  - packages/ember-codemod-template-tag
