--- a/configs/prettier/package.json
+++ b/configs/prettier/package.json
@@ -16,8 +16,8 @@
     }
   },
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
