--- a/configs/ember-template-lint/package.json
+++ b/configs/ember-template-lint/package.json
@@ -11,8 +11,8 @@
   "type": "module",
   "main": "index.cjs",
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
