--- a/configs/ember-template-lint/package.json
+++ b/configs/ember-template-lint/package.json
@@ -11,18 +11,18 @@
   "type": "module",
   "main": "index.cjs",
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/ember-template-lint": "^0.4.0"
+    "@ijlee2-frontend-configs/ember-template-lint": "^0.4.2"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.5.0"
+    "prettier": "^3.5.2"
   },
   "peerDependencies": {
     "ember-template-lint": "^6.1.0"
