--- a/configs/prettier/package.json
+++ b/configs/prettier/package.json
@@ -16,20 +16,20 @@
     }
   },
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/prettier": "^0.2.0"
+    "@ijlee2-frontend-configs/prettier": "^0.2.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "prettier": "^3.5.0"
+    "prettier": "^3.5.2"
   },
   "peerDependencies": {
-    "prettier": "^3.5.0"
+    "prettier": "^3.5.2"
   },
   "peerDependenciesMeta": {
     "prettier": {
