--- a/configs/stylelint/package.json
+++ b/configs/stylelint/package.json
@@ -16,21 +16,21 @@
     }
   },
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/stylelint": "^0.2.0"
+    "@ijlee2-frontend-configs/stylelint": "^0.2.1"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.5.0"
+    "prettier": "^3.5.2"
   },
   "peerDependencies": {
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.2",
     "stylelint": "^16.14.1"
   },
   "peerDependenciesMeta": {
