chore: Standardized prefix

--- a/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
@@ -15,8 +15,8 @@
     "lint:js:fix": "prettier --write \"**/*.js\""
   },
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix"
   },
