--- a/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/typescript/package.json
@@ -11,8 +11,8 @@
     "./node22": "./node22/index.json"
   },
   "scripts": {
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:js": "prettier \"**/*.{cjs,json,mjs}\" --check",
     "lint:js:fix": "prettier \"**/*.{cjs,json,mjs}\" --write"
   },
