--- a/configs/eslint/ember/package.json
+++ b/configs/eslint/ember/package.json
@@ -10,8 +10,9 @@
   "author": "Isaac J. Lee",
   "type": "module",
   "exports": {
-    "./app": "./app/index.js",
-    "./v2-addon": "./v2-addon/index.js"
+    "./v1-app": "./v1-app/index.mjs",
+    "./v2-addon": "./v2-addon/index.mjs",
+    "./v2-app": "./v2-app/index.mjs"
   },
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
@@ -20,19 +21,19 @@
     "lint:js:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/eslint-config-ember": "^0.2.3"
+    "@ijlee2-frontend-configs/eslint-config-ember": "^0.3.1"
   },
   "devDependencies": {
     "@shared-configs/eslint-config-node": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.3"
   },
   "peerDependencies": {
     "eslint": "^9.21.0",
-    "prettier": "^3.5.2",
-    "typescript": "^5.7.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   },
   "peerDependenciesMeta": {
     "eslint": {
