chore: Updated blueprints (create-v2-addon-repo)

--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
@@ -3,17 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "docs-app/tests/*": [
-        "tests/*"
-      ],
-      "docs-app/*": [
-        "app/*"
-      ],
-      "*": [
-        "types/*"
-      ]
+      "docs-app/tests/*": ["tests/*"],
+      "docs-app/*": ["app/*"],
+      "*": ["types/*"]
     },
-    "skipLibCheck": true,
     "types": [
       "ember-source/types"
     ]
