--- a/packages/create-v2-addon-repo/src/blueprints/configs/eslint/ember/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/eslint/ember/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "exports": {
     "./v1-app": "./v1-app/index.mjs",
-    "./v2-addon": "./v2-addon/index.mjs",
-    "./v2-app": "./v2-app/index.mjs"
+    "./v2-addon": "./v2-addon/index.mjs"
   },
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
@@ -16,19 +15,19 @@
     "lint:js:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/eslint-config-ember": "^0.4.0"
+    "@ijlee2-frontend-configs/eslint-config-ember": "^0.5.1"
   },
   "devDependencies": {
     "@shared-configs/eslint-config-node": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "eslint": "^9.23.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3"
   },
   "peerDependencies": {
-    "eslint": "^9.23.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "peerDependenciesMeta": {
     "eslint": {
