--- a/configs/stylelint/package.json
+++ b/configs/stylelint/package.json
@@ -9,7 +9,7 @@
   },
   "author": "Isaac J. Lee",
   "type": "module",
-  "main": "./index.mjs",
+  "main": "index.mjs",
   "scripts": {
     "lint": "prettier \"**/*.mjs\" --cache --check",
     "lint:fix": "prettier \"**/*.mjs\" --cache --write"
