--- a/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/eslint/node/package.json
@@ -9,36 +9,23 @@
     "./typescript": "./typescript/index.mjs"
   },
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
-  },
-  "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "eslint . --cache",
-    "lint:js:fix": "eslint . --fix"
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/eslint-config-node": "^1.0.1"
+    "@ijlee2-frontend-configs/eslint-config-node": "^2.0.0"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
-    "concurrently": "^9.1.2",
-    "eslint": "^9.26.0",
+    "eslint": "^9.28.0",
     "prettier": "^3.5.3"
   },
   "peerDependencies": {
-    "eslint": "^9.26.0",
-    "prettier": "^3.5.3",
+    "eslint": "^9.28.0",
     "typescript": "^5.8.3"
   },
   "peerDependenciesMeta": {
     "eslint": {
-      "optional": false
-    },
-    "prettier": {
       "optional": false
     },
     "typescript": {
