--- a/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
@@ -3,25 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "description": "Configuration for prettier",
-  "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier --check \"**/*.js\"",
-    "lint:js:fix": "prettier --write \"**/*.js\""
-  },
   "type": "module",
-  "main": "./index.mjs",
+  "exports": {
+    "./ember": "./ember/index.mjs",
+    "./node": "./node/index.mjs"
+  },
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
-    "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
+    "lint": "prettier \"**/*.mjs\" --cache --check",
+    "lint:fix": "prettier \"**/*.mjs\" --cache --write"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/prettier": "^1.0.0"
+    "@ijlee2-frontend-configs/prettier": "^2.0.0"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2",
     "prettier": "^3.5.3"
   },
   "peerDependencies": {
