--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
@@ -7,19 +7,10 @@
       "docs-app/*": ["app/*"],
       "*": ["types/*"]
     },
-    "types": [
-      "ember-source/types"
-    ]
+    "types": ["ember-source/types"]
   },
-  "include": [
-    "app/**/*",
-    "tests/**/*",
-    "types/**/*"
-  ],
+  "include": ["app/**/*", "tests/**/*", "types/**/*"],
   "glint": {
-    "environment": [
-      "ember-loose",
-      "ember-template-imports"
-    ]
+    "environment": ["ember-loose", "ember-template-imports"]
   }
 }
