--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "type": "module",
   "scripts": {
     "build": "pnpm --filter \"./packages/**\" build",
-    "lint": "pnpm --filter \"*\" lint",
-    "lint:fix": "pnpm --filter \"*\" lint:fix",
+    "lint": "pnpm --filter \"*\" lint && pnpm lint:package-json",
+    "lint:fix": "pnpm --filter \"*\" lint:fix && pnpm lint:package-json:fix",
     "lint:package-json": "pnpm lint:package-json:fix --check",
     "lint:package-json:fix": "sort-package-json \"**/package.json\" --ignore \"**/{blueprints,dist,dist-for-testing,node_modules,tests,tmp}/**\"",
     "prepare": "pnpm build",
